--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
-.centered {
-  justify-content: center; /* center items horizontally, in this case */
-  align-items: center;     /* center items vertically, in this case */
-  display: flex;
-}
-
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #a5a5b5a4;
+  background-color: #0f0f10e4;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  width:70%;
+  margin: auto;
+  align-items: center;
 }
 
 a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 h1 {
   text-align: center;
 }
 
+.App {
+  color:#fff;
+}
+
 .news{
   background-color: #fff;
+  color: #000;
   margin: 10px;
   padding: 10px;
   border: 1px black;
@@ -30,4 +40,35 @@ h1 {
 
 .news:hover {
   border-color: rgb(36, 137, 208);
+}
+
+.sub {
+  margin:10px;
+}
+
+input {
+  padding: 10px;
+  margin-right: 5px;
+}
+
+.btn {
+  background: rgb(36, 149, 5);
+  color: #fff;
+  padding: 10px 20px;
+  margin: 5px;
+  border:none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.btn:hover {
+  background: rgb(29, 130, 2);
+}
+
+.inputField {
+  border-radius: 5px;
+  font-size: 15px;
+  border:none;
 }
