--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,19 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #0f0f10e4;
+  background-color: #242424;
   display:flex;
   justify-content: center;
   flex-direction: column;
   min-height: 100vh;
-  width:70%;
   margin: auto;
   align-items: center;
 }
 
 a {
   text-decoration: none;
+  color: rgb(184, 224, 255);
+  cursor: pointer;
 }
 
 a:hover {
@@ -24,22 +25,46 @@ h1 {
   text-align: center;
 }
 
+.container {
+  width:70%;
+  max-width:1280px;
+  margin:auto;
+}
+
+@media (max-width: 728px) {
+  .container {
+    width:96%;
+  }
+}
+
 .App {
   color:#fff;
 }
 
 .news{
-  background-color: #fff;
-  color: #000;
+  background-color: rgba(200,200,200,.1);
+  color: #fff;
   margin: 10px;
   padding: 10px;
+  padding-left:25px;
   border: 1px black;
   border-style:solid;
   border-radius: 8px;
 }
 
+.news .des {
+  font-size: small;
+  margin-top: -5px;
+  color:rgba(200, 200, 200, 0.5);
+  opacity: 0;
+}
+
 .news:hover {
   border-color: rgb(36, 137, 208);
+}
+
+.news:hover .des {
+  opacity: 1;
 }
 
 .sub {
@@ -61,14 +86,78 @@ input {
   cursor: pointer;
   text-decoration: none;
   font-size: 15px;
+  position:relative;
 }
 
 .btn:hover {
   background: rgb(29, 130, 2);
 }
 
+.btn:disabled {
+  background:grey;
+  cursor: progress;
+  padding: 10px 20px;
+  margin: 5px;
+  color:transparent;
+}
+
+.btn--loading::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+      transform: rotate(0turn);
+  }
+
+  to {
+      transform: rotate(1turn);
+  }
+}
+
 .inputField {
   border-radius: 5px;
   font-size: 15px;
   border:none;
+}
+
+/*
+Tags
+*/
+ul.tags {
+  list-style-type: none;
+  padding:0;
+}
+
+ul.tags li {
+  display: inline-block;
+}
+
+ul.tags li a {
+  display: inline-block;
+  margin:0.5rem 0rem;
+  margin-right: .5rem;
+  background:rgba(200,200,200, 0.2);
+  border:.2rem rgba(0,0,0,0.2) solid;
+  padding: .25rem 1rem;
+  border-radius:100rem;
+  color:#eee;
+}
+
+ul.tags li a:hover {
+  background:rgba(200,200,200, 0.4);
+  color:#fff;
+  text-decoration: none;
 }
